[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# -----------------------------------------------------------------------------
# Project metadata
# -----------------------------------------------------------------------------
[project]
name = "graph-econ"
version = "0.1.0"
description = "A graph-based economy simulation engine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Khuong Tran", email = "kvktran@gmail.com" }]
keywords = ["economics", "simulation", "graph", "agent-based", "finance", "modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
requires-python = ">=3.10"

dependencies = [
    "networkx>=3.2",        # Graph engine backbone
    "numpy>=1.26",          # Numerical operations
    "pandas>=2.1",          # Time-series history and export
    "pydantic>=2.5",        # Agent/product schema validation
    "rich>=13.0",           # Pretty console output and progress
]

[project.optional-dependencies]
# Visualization
viz = [
    "matplotlib>=3.8",
    "plotly>=5.18",
    "pyvis>=0.3",           # Interactive graph visualization
]

# Data export
export = [
    "pyarrow>=14.0",        # Parquet export
    "openpyxl>=3.1",        # Excel export
]

# Development
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.88",     # Property-based testing
    "ruff>=0.1",            # Linting + formatting
    "mypy>=1.7",            # Type checking
    "pre-commit>=3.5",
    "maturin>=1.7",         # Rust build
]

# Docs
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.24",
]

# Everything
all = [
    "agora-econ[viz,export,dev,docs]",
]

[project.urls]
Homepage      = "https://github.com/yourname/agora"
Documentation = "https://agora-econ.readthedocs.io"
Repository    = "https://github.com/yourname/agora"
Issues        = "https://github.com/yourname/agora/issues"
Changelog     = "https://github.com/yourname/agora/blob/main/CHANGELOG.md"

# -----------------------------------------------------------------------------
# Maturin (PyO3 / Rust extension)
# -----------------------------------------------------------------------------
[tool.maturin]
# Python source lives in agora/, Rust extension compiled into agora._core
python-source  = "python"
module-name    = "agora._core"
features       = ["pyo3/extension-module"]

# -----------------------------------------------------------------------------
# Ruff — linting & formatting
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type hints)
]
ignore = [
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
]

[tool.ruff.lint.isort]
known-first-party = ["agora"]

# -----------------------------------------------------------------------------
# Mypy — type checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.10"
strict                 = true
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true   # networkx stubs are incomplete

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --cov=agora --cov-report=term-missing --cov-report=html"
filterwarnings = ["error"]

[tool.coverage.run]
source  = ["agora"]
omit    = ["tests/*", "agora/_core*"]  # Exclude compiled Rust extension

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]